--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -2,7 +2,7 @@ name: Wake Up Hakoware
 
 on:
   schedule:
-    - cron: '0 * * * *' # Runs every hour
+    - cron: '0 * * * *'
   workflow_dispatch:
 
 jobs:
@@ -10,12 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - uses: actions/setup-node@v4
         with:
           node-version: '18'
       
+      # FIX: Changed 'npm ci' to 'npm install'
+      # This fixes the "Lockfile Mismatch" error caused by manual editing
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
         
       - name: Run Ghost Script
         run: node scripts/wake_up.js
